analysis/syntax/src/main/java/eu/sanjin/kurelic/mvcgenerator/analysis/syntax/parser/SyntaxParser.java
package eu.sanjin.kurelic.mvcgenerator.analysis.syntax.parser;

import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.Token;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.TokenType;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.Tokens;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.entity.DataTypeToken;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.entity.KeywordToken;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.entity.LexicalSpecialCharacters;
import eu.sanjin.kurelic.mvcgenerator.analysis.lexical.structure.entity.SpecialCharacterToken;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.exception.*;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.SyntaxTree;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.CreateDefinition;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.CreateTableDefinition;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.TableDefinition;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.ColumnDefinition;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.TableConstraintDefinition;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.TableElement;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.TableElementList;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.column.DataType;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.*;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.check.Expression;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.check.operand.*;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.check.operator.Operator;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.check.predicate.BinaryPredicate;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.check.predicate.UnaryPredicate;
import eu.sanjin.kurelic.mvcgenerator.analysis.syntax.structure.create.table.element.constraint.reference.ReferenceAction;
import org.javatuples.Pair;

import java.util.ArrayList;
import java.util.List;
import java.util.Objects;
import java.util.Stack;

public class SyntaxParser {

  private TokenSupplier token;
  private SyntaxTree syntaxTree;

  public SyntaxParser(TokenSupplier token) {
    this.token = token;
  }

  public SyntaxTree getSyntaxTree() {
    return syntaxTree;
  }

  public void parse() throws SyntaxException {
    syntaxTree = new SyntaxTree();
    token.clear();
    syntaxTree.setCreateDefinition(createDefinition());
  }

  // <CreateDefinition> ::= "CREATE" <CreateTableDefinition> ";" [ <CreateDefinition> ]
  private List<CreateDefinition> createDefinition() throws SyntaxException {
    List<CreateDefinition> createDefinitions = new ArrayList<>();
    token.equalsOrThrow(KeywordToken.CREATE).next(); // CREATE
    createDefinitions.add(createTableDefinition()); // <CreateTableDefinition>
    token.equalsOrThrow(SpecialCharacterToken.SEMICOLON).next(); // ;
    if (token.hasNext()) {
      createDefinitions.addAll(createDefinition()); // <CreateDefinition>
    }
    return createDefinitions;
  }

  // <CreateTableDefinition> ::= "TABLE" <TableDefinition>
  private CreateTableDefinition createTableDefinition() throws SyntaxException {
    token.equalsOrThrow(KeywordToken.TABLE).next(); // TABLE
    return new CreateTableDefinition(tableDefinition()); // <TableDefinition>
  }

  // <TableDefinition> ::= <TableName> "(" <TableElementList> ")"
  private TableDefinition tableDefinition() throws SyntaxException {
    TableDefinition tableDefinition = new TableDefinition();
    tableDefinition.setTableName(tableName()); // <TableName>
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // (
    tableDefinition.setTableElementList(tableElementList()); // <TableElementList>
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next(); // )
    return tableDefinition;
  }

  // <TableElementList> ::= <TableElement> [ "," <TableElementList> ]
  private TableElementList tableElementList() throws SyntaxException {
    TableElementList tableElementList = new TableElementList();
    tableElementList.add(tableElement()); // <TableElement>
    if (token.equalsToken(SpecialCharacterToken.COMA)) {
      token.next(); // ,
      tableElementList.addAll(tableElementList()); // <TableElementList>
    }
    return tableElementList;
  }

  // <TableElement> ::= <ColumnDefinition> | <TableConstraintDefinition>
  private TableElement tableElement() throws SyntaxException {
    switch (token.getToken().getTokenType()) {
      case QUOTED_IDENTIFIER_VALUE:
      case IDENTIFIER:
        return columnDefinition(); // <ColumnDefinition>
      case KEYWORD:
        return tableConstraintDefinition(); // <TableConstraintDefinition>
      default:
        throw new UnexpectedTokenSyntaxException(token.getToken());
    }
  }

  // <ColumnDefinition> ::= <ColumnName> <DataType> [ <DefaultClause> ] [ <ColumnConstraintDefinitions> ] [ <CollateClause> ]
  // <ColumnConstraintDefinitions> ::= <ColumnConstraintDefinition> [ <ColumnConstraintDefinitions> ]
  private ColumnDefinition columnDefinition() throws SyntaxException {
    ColumnDefinition columnDefinition = new ColumnDefinition();
    columnDefinition.setColumnName(columnName()); // <ColumnName>
    columnDefinition.setDataType(dataType()); // <DataType>
    if (token.equalsToken(KeywordToken.DEFAULT)) {
      columnDefinition.setDefaultValue(defaultClause()); // <DefaultClause>
    }
    while (token.getToken().getTokenType().equals(TokenType.KEYWORD) && !token.equalsToken(KeywordToken.COLLATE)) {
      columnDefinition.getConstraintList().add(columnConstraintDefinition()); // <ColumnConstraintDefinitions>
    }
    if (token.equalsToken(KeywordToken.COLLATE)) {
      collateClause(); // <CollateClause>
    }
    return columnDefinition;
  }

  // <DataType> ::= <CharacterType> | <NationalCharacterType> | <BitType> | <NumericType> | <DatetimeType>
  private DataType dataType() throws SyntaxException {
    DataType dataType;
    String value = token.getToken().getValue();
    if (DataTypeToken.isCharacter(value)) {
      dataType = characterType();
    } else if (DataTypeToken.isNationalCharacter(value)) {
      dataType = nationalCharacterType();
    } else if (DataTypeToken.isBitType(value)) {
      dataType = bitType();
    } else if (DataTypeToken.isIntegerNumber(value) || DataTypeToken.isRealNumber(value)) {
      dataType = numericType();
    } else if (DataTypeToken.isDateTime(value)) {
      dataType = dateTimeType();
    } else {
      throw new InvalidDataTypeSyntaxException(token.getLineNumber());
    }
    return dataType;
  }

  // <CharacterType> ::= ("CHARACTER" | "CHAR" | "VARCHAR") [ <Length> ] [ "CHARACTER" "SET" <CharacterSetName> ]
  private DataType characterType() throws SyntaxException {
    DataType dataType = new DataType(token.getToken());
    token.next(); // value
    if (token.equalsToken(SpecialCharacterToken.LEFT_BRACKET)) {
      dataType.setPrecisionOrLength(length()); // <Length>
    }
    if (token.equalsToken(DataTypeToken.CHARACTER)) {
      token.next(); // "CHARACTER"
      token.equalsOrThrow(KeywordToken.SET).next(); // "SET"
      characterSetName(); // <CharacterSetName>
    }
    return dataType;
  }

  // <NationalCharacterType> ::= ("NCHAR" | "NVARCHAR") [ <Length> ]
  private DataType nationalCharacterType() throws SyntaxException {
    DataType dataType = new DataType(token.getToken());
    token.next(); // value
    if (token.equalsToken(SpecialCharacterToken.LEFT_BRACKET)) {
      dataType.setPrecisionOrLength(length());
    }
    return dataType;
  }

  // <BitType> ::= "BOOLEAN"
  private DataType bitType() throws SyntaxException {
    DataType dataType = new DataType(token.getToken());
    token.next();
    return dataType;
  }

  // <NumericType> ::=  <NumericTypeValue> | <NumericTypeValueWithPrecision> | <NumericTypeValueWithScale>
  // <NumericTypeValue> ::= "INTEGER" | "INT" | "SMALLINT" | "TINYINT" | "MEDIUMINT" | "BIGINT" | "REAL" | "DOUBLE"
  // <NumericTypeValueWithPrecision> ::= "FLOAT" [ <Precision> ]
  // <NumericTypeValueWithScale> ::= ( "NUMERIC" | "DECIMAL" | "DEC") [ <PrecisionWithScale> ]
  private DataType numericType() throws SyntaxException {
    DataType dataType = new DataType(token.getToken());
    if (token.equalsToken(DataTypeToken.FLOAT)) {
      token.next(); // value
      if (token.equalsToken(SpecialCharacterToken.LEFT_BRACKET)) {
        dataType.setPrecisionOrLength(precision()); // <Precision>
      }
    } else if (token.equalsToken(DataTypeToken.NUMERIC) || token.equalsToken(DataTypeToken.DECIMAL) || token.equalsToken(DataTypeToken.DEC)) {
      token.next(); // value
      if (token.equalsToken(SpecialCharacterToken.LEFT_BRACKET)) {
        Pair<Token, Token> precisionAndScale = precisionAndScale(); // <PrecisionWithScale>
        dataType.setPrecisionOrLength(precisionAndScale.getValue0());
        dataType.setScale(precisionAndScale.getValue1());
      }
    } else {
      token.next(); // value
    }
    return dataType;
  }

  // <DatetimeType> ::= "DATE" | ( "TIME" | "TIMESTAMP" | "DATETIME" ) [ <Precision> ] [ "WITH" "TIME" "ZONE" ]
  private DataType dateTimeType() throws SyntaxException {
    DataType dataType = new DataType(token.getToken());
    if (!token.equalsToken(DataTypeToken.DATE)) {
      token.next(); // value
      if (token.equalsToken(SpecialCharacterToken.LEFT_BRACKET)) {
        dataType.setPrecisionOrLength(precision()); // <Precision>
      }
      if (token.equalsToken(KeywordToken.WITH)) {
        token.next(); // "WITH"
        token.equalsOrThrow(DataTypeToken.TIME).next(); // "TIME"
        token.equalsOrThrow(KeywordToken.ZONE).next(); // "ZONE"
      }
    } else {
      token.next(); // value
    }
    return dataType;
  }

  // <Precision> ::= <Length>
  private Token precision() throws SyntaxException {
    return length();
  }

  // <Length> ::= "(" <UnsignedIntegerConstant> ")"
  private Token length() throws SyntaxException {
    Token value;
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // "("
    value = unsignedIntegerConstant(); // <UnsignedIntegerConstant>
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next(); // ")"
    return value;
  }

  // <PrecisionWithScale> ::= "(" <UnsignedIntegerConstant> [ "," <UnsignedIntegerConstant> ] ")"
  private Pair<Token, Token> precisionAndScale() throws SyntaxException {
    Token precision, scale = null;
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // "("
    precision = unsignedIntegerConstant(); // <UnsignedIntegerConstant>
    if (token.equalsToken(SpecialCharacterToken.COMA)) {
      token.next(); // ","
      scale = unsignedIntegerConstant(); // <UnsignedIntegerConstant>
    }
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next();
    return new Pair<>(precision, scale);
  }

  // <UnsignedIntegerConstant> ::= ( "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ) [ <UnsignedIntegerConstant> ]
  private Token unsignedIntegerConstant() throws SyntaxException {
    Token unsignedIntegerConstant = token.getToken();
    token.next(); // <UnsignedIntegerConstant>
    if (!unsignedIntegerConstant.getTokenType().equals(TokenType.CONSTANT_INTEGER_VALUE)) {
      throw new InvalidIntegerValueSyntaxException(token.getToken());
    }
    return unsignedIntegerConstant;
  }

  // <DefaultClause> ::= "DEFAULT" (Constant | "NULL" | "USER" | "CURRENT_USER" | "SESSION_USER" | "SYSTEM_USER")
  private Token defaultClause() throws SyntaxException {
    Token defaultValue;
    token.equalsOrThrow(KeywordToken.DEFAULT).next(); // "DEFAULT"
    defaultValue = token.getToken();
    switch (defaultValue.getTokenType()) {
      case CONSTANT_INTEGER_VALUE:
      case CONSTANT_QUOTED_VALUE:
      case CONSTANT_REAL_NUMBER_VALUE:
        break; // Constant is valid default value
      case KEYWORD:
        if (token.equalsToken(KeywordToken.NULL)
          || token.equalsToken(KeywordToken.USER)
          || token.equalsToken(KeywordToken.CURRENT_USER)
          || token.equalsToken(KeywordToken.SESSION_USER)
          || token.equalsToken(KeywordToken.SYSTEM_USER)) {
          break; // valid keywords as default value
        }
      default:
        throw new UnexpectedTokenSyntaxException(defaultValue);
    }
    token.next(); // run after switch
    return defaultValue;
  }

  // Not used in later processing
  // <CollateClause> ::= "COLLATE" <CollateName>
  private void collateClause() throws SyntaxException {
    token.equalsOrThrow(KeywordToken.COLLATE).next(); // "COLLATE"
    collateName(); // <CollateName>
  }

  // <ColumnConstraintDefinition> ::= [ <ConstraintNameDefinition> ] <ColumnConstraint> [ <ConstraintAttributes> ]
  private Constraint columnConstraintDefinition() throws SyntaxException {
    Constraint constraint;
    if (token.equalsToken(KeywordToken.CONSTRAINT)) {
      constraintNameDefinition(); // <ConstraintNameDefinition>
    }
    constraint = columnConstraint(); // <ColumnConstraint>
    if (token.equalsToken(KeywordToken.INITIALLY)
      || (token.equalsToken(KeywordToken.NOT) && token.hasNextToken(KeywordToken.DEFERRABLE))
      || token.equalsToken(KeywordToken.DEFERRABLE)) {
      constraintAttributes(); // <ConstraintAttributes>
    }
    return constraint;
  }

  // Not used in later processing
  // <ConstraintNameDefinition> ::= "CONSTRAINT" <ConstraintName>
  private void constraintNameDefinition() throws SyntaxException {
    token.equalsOrThrow(KeywordToken.CONSTRAINT).next(); // "CONSTRAINT"
    constraintName(); // <ConstraintName>
  }

  // Not used in later processing
  // <ConstraintAttributes> ::= <ConstraintCheckTime> [ [ "NOT" ] "DEFERRABLE" ] | [ "NOT" ] "DEFERRABLE" [ <ConstraintCheckTime> ]
  private void constraintAttributes() throws SyntaxException {
    if (token.equalsToken(KeywordToken.INITIALLY)) {
      constraintCheckTime();
      if (token.equalsToken(KeywordToken.NOT)) {
        token.next(); // "NOT"
      }
      if (token.equalsToken(KeywordToken.DEFERRABLE)) {
        token.next(); // "DEFERRABLE"
      }
    } else {
      if (token.equalsToken(KeywordToken.NOT)) {
        token.next(); // "NOT"
      }
      token.equalsOrThrow(KeywordToken.DEFERRABLE).next();
      if (token.equalsToken(KeywordToken.INITIALLY)) {
        constraintCheckTime();
      }
    }

  }

  // Not used in later processing
  // <ConstraintCheckTime> ::=  "INITIALLY" ( "DEFERRED" | "IMMEDIATE" )
  private void constraintCheckTime() throws SyntaxException {
    token.equalsOrThrow(KeywordToken.INITIALLY).next(); // "INITIALLY"
    if (token.equalsToken(KeywordToken.DEFERRED) || token.equalsToken(KeywordToken.IMMEDIATE)) {
      token.next(); // "DEFERRED" | "IMMEDIATE"
    } else {
      String expected = String.format("%s or %s", KeywordToken.DEFERRED, KeywordToken.IMMEDIATE);
      throw new UnexpectedTokenSyntaxException(token.getToken(), expected);
    }
  }

  // <ColumnConstraint> ::= "NOT" "NULL" | "UNIQUE" | "PRIMARY KEY" | <ReferencesClause> | <CheckClause>
  private Constraint columnConstraint() throws SyntaxException {
    if (token.equalsToken(KeywordToken.NOT)) {
      token.next(); // "NOT"
      token.equalsOrThrow(KeywordToken.NULL).next(); // "NULL"
      return new NotNullConstraint();
    }
    if (token.equalsToken(KeywordToken.UNIQUE)) {
      token.next(); // "UNIQUE"
      return new UniqueConstraint();
    }
    if (token.equalsToken(KeywordToken.PRIMARY)) {
      token.next(); // "PRIMARY"
      token.equalsOrThrow(KeywordToken.KEY).next();
      return new PrimaryKeyConstraint();
    }
    if (token.equalsToken(KeywordToken.REFERENCES)) {
      return referencesClause();
    }
    if (token.equalsToken(KeywordToken.CHECK)) {
      return checkClause();
    }
    throw new UnexpectedTokenSyntaxException(token.getToken());
  }

  // <TableConstraintDefinition> ::= [ <ConstraintNameDefinition> ] <TableConstraint> [ <ConstraintCheckTime> ]
  private TableConstraintDefinition tableConstraintDefinition() throws SyntaxException {
    TableConstraintDefinition tableConstraintDefinition;
    if (token.equalsToken(KeywordToken.CONSTRAINT)) {
      constraintNameDefinition(); // <ConstraintNameDefinition>
    }
    tableConstraintDefinition = tableConstraint(); // <ColumnConstraint>
    if (token.equalsToken(KeywordToken.INITIALLY)
      || (token.equalsToken(KeywordToken.NOT) && token.hasNextToken(KeywordToken.DEFERRABLE))
      || token.equalsToken(KeywordToken.DEFERRABLE)) {
      constraintAttributes(); // <ConstraintAttributes>
    }
    return tableConstraintDefinition;
  }

  // <TableConstraint> ::= <UniqueConstraintDefinition> | <ReferentialConstraintDefinition> | <CheckClause>
  // <UniqueConstraintDefinition> ::= ("UNIQUE" | "PRIMARY" "KEY") "(" <ColumnNameList> ")"
  // <ReferentialConstraintDefinition> ::= "FOREIGN" "KEY" "(" <ColumnNameList> ")" <ReferencesClause>
  private TableConstraintDefinition tableConstraint() throws SyntaxException {
    TableConstraintDefinition tableConstraintDefinition = new TableConstraintDefinition();
    boolean references = false;
    if (token.equalsToken(KeywordToken.UNIQUE)) {
      token.next(); // "UNIQUE"
      tableConstraintDefinition.setConstraintType(new UniqueConstraint());
    } else if (token.equalsToken(KeywordToken.PRIMARY)) {
      token.next(); // "PRIMARY"
      token.equalsOrThrow(KeywordToken.KEY).next(); // "KEY"
      tableConstraintDefinition.setConstraintType(new PrimaryKeyConstraint());
    } else if (token.equalsToken(KeywordToken.FOREIGN)) {
      token.next(); // "FOREIGN"
      token.equalsOrThrow(KeywordToken.KEY).next(); // "KEY"
      references = true;
    } else if (token.equalsToken(KeywordToken.CHECK)) {
      tableConstraintDefinition.setConstraintType(checkClause());
      return tableConstraintDefinition;
    }
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // "("
    tableConstraintDefinition.setColumnList(columnNameList()); // <ColumnNameList>
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next(); // ")"

    if (references) {
      ReferenceConstraint referenceConstraint = referencesClause();
      tableConstraintDefinition.setConstraintType(referenceConstraint);
      // Check column count
      if (tableConstraintDefinition.getColumnList().size() != referenceConstraint.getColumnList().size()) {
        throw new InvalidReferenceColumnCountSyntaxException(token.getLineNumber());
      }
    }
    return tableConstraintDefinition;
  }

  // <ReferencesClause> ::= "REFERENCES" <TableName> [ "(" <ColumnNameList> ")" ] [ "MATCH" ("FULL" | "PARTIAL") ] [ <ReferentialTriggeredAction> ]
  private ReferenceConstraint referencesClause() throws SyntaxException {
    ReferenceConstraint referenceConstraint = new ReferenceConstraint();
    token.equalsOrThrow(KeywordToken.REFERENCES).next(); // "REFERENCES"
    referenceConstraint.setTableName(tableName()); // <TableName>
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // "("
    referenceConstraint.setColumnList(columnNameList()); // <ColumnNameList>
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next(); // ")"
    if (token.equalsToken(KeywordToken.MATCH)) {
      token.next(); // "MATCH"
      if (token.equalsToken(KeywordToken.FULL) || token.equalsToken(KeywordToken.PARTIAL)) {
        token.next(); // "FULL" | "PARTIAL"
      } else {
        String expected = String.format("%s or %s", KeywordToken.FULL, KeywordToken.PARTIAL);
        throw new UnexpectedTokenSyntaxException(token.getToken(), expected);
      }
    }
    if (token.equalsToken(KeywordToken.ON)) {
      Pair<ReferenceAction, ReferenceAction> actions = referentialTriggeredAction(); // <ReferentialTriggeredAction>
      referenceConstraint.setUpdateAction(actions.getValue0());
      referenceConstraint.setDeleteAction(actions.getValue1());
    }
    return referenceConstraint;
  }

  /**
   * <ReferentialTriggeredAction> ::= <UpdateRule> [ <DeleteRule> ] | <DeleteRule> [ <UpdateRule> ]
   * <UpdateRule> ::= "ON" "UPDATE" <ReferentialAction>
   * <DeleteRule> ::= "ON" "DELETE" <ReferentialAction>
   *
   * @return Pair - first item is Update trigger second is Delete trigger
   * @throws SyntaxException - for unexpected token
   */
  private Pair<ReferenceAction, ReferenceAction> referentialTriggeredAction() throws SyntaxException {
    Pair<ReferenceAction, ReferenceAction> actions = Pair.with(ReferenceAction.NO_ACTION, ReferenceAction.NO_ACTION);
    token.equalsOrThrow(KeywordToken.ON).next(); // "ON"
    if (token.equalsToken(KeywordToken.UPDATE)) {
      token.next(); // "UPDATE"
      actions = actions.setAt0(referentialAction()); // <ReferentialAction>
      if (token.equalsToken(KeywordToken.DELETE)) {
        token.next(); // "DELETE"
        actions = actions.setAt1(referentialAction()); // <ReferentialAction>
      }
    } else if (token.equalsToken(KeywordToken.DELETE)) {
      token.next(); // "DELETE"
      actions = actions.setAt1(referentialAction()); // <ReferentialAction>
      if (token.equalsToken(KeywordToken.UPDATE)) {
        token.next(); // "UPDATE"
        actions = actions.setAt0(referentialAction()); // <ReferentialAction>
      }
    } else {
      String expected = String.format("%s or %s", KeywordToken.UPDATE, KeywordToken.DELETE);
      throw new UnexpectedTokenSyntaxException(token.getToken(), expected);
    }
    return actions;
  }

  // <ReferentialAction> ::= "CASCADE" | "SET NULL" | "SET DEFAULT" | "NO ACTION"
  private ReferenceAction referentialAction() throws SyntaxException {
    if (token.equalsToken(KeywordToken.CASCADE)) {
      token.next(); // "CASCADE"
      return ReferenceAction.CASCADE;
    }
    if (token.equalsToken(KeywordToken.SET)) {
      token.next(); // "SET"
      if (token.equalsToken(KeywordToken.NULL)) {
        token.next(); // "NULL"
        return ReferenceAction.SET_NULL;
      }
      if (token.equalsToken(KeywordToken.DEFAULT)) {
        token.next(); // "DEFAULT"
        return ReferenceAction.SET_DEFAULT;
      }
      String expected = String.format("%s or %s", KeywordToken.NULL, KeywordToken.DEFAULT);
      throw new UnexpectedTokenSyntaxException(token.getToken(), expected);
    }
    if (token.equalsToken(KeywordToken.NO)) {
      token.next(); // "NO"
      token.equalsOrThrow(KeywordToken.ACTION).next(); // "ACTION"
      return ReferenceAction.NO_ACTION;
    }
    String expected = String.format("%s, %s %s, %s %s or %s %s", KeywordToken.CASCADE, KeywordToken.SET,
      KeywordToken.NULL, KeywordToken.SET, KeywordToken.DEFAULT, KeywordToken.NO, KeywordToken.ACTION);
    throw new UnexpectedTokenSyntaxException(token.getToken(), expected);
  }

  // <CheckClause> ::= "CHECK" "(" <SearchCondition> ")"
  private CheckConstraint checkClause() throws SyntaxException {
    CheckConstraint checkConstraint = new CheckConstraint();

    token.equalsOrThrow(KeywordToken.CHECK).next();
    token.equalsOrThrow(SpecialCharacterToken.LEFT_BRACKET).next(); // "("
    checkConstraint.setCheckExpression(searchCondition()); // <SearchCondition>
    token.equalsOrThrow(SpecialCharacterToken.RIGHT_BRACKET).next(); // ")"

    return checkConstraint;
  }

  // <SearchCondition> ::= <BooleanFactor> [ ("OR" | "AND") <SearchCondition> ]
  private Expression searchCondition() throws SyntaxException {
    Expression expression = booleanFactor(); // <BooleanFactor>
    if (token.equalsToken(KeywordToken.OR) || token.equalsToken(KeywordToken.AND)) {
      BinaryPredicate combineNode = new BinaryPredicate();
      Operator operator = new Operator();

      // operator
      operator.setLineNumber(token.getLineNumber());
      if (token.equalsToken(KeywordToken.AND)) {
        operator.setOperator(SpecialCharacterToken.AND);
      } else if (token.equalsToken(KeywordToken.OR)) {
        operator.setOperator(SpecialCharacterToken.OR);
      }
      token.next(); // OR | AND
      combineNode.setOperator(operator);

      // expressions
      combineNode.setFirstExpression(expression);
      combineNode.setSecondExpression(searchCondition()); // <SearchCondition>
      return combineNode;
    }
    return expression;
  }
